update helpdocs features pages to get ready to go live

--- a/html/athletesparentsfansfeatures.html
+++ b/html/athletesparentsfansfeatures.html
@@ -1,24 +1,31 @@
-<!--
-  Page URL: https://support.athletic.net/article/i6hyoj1if1-features-for-athletes-parents-fans
+<div class="hd--html">
+  <!--
+    Page URL: https://support.athletic.net/article/i6hyoj1if1-features-for-athletes-parents-fans
   -->
-<head>
-<link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
-</head>
+  <link rel="stylesheet" type="text/css"
+    href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+  <!-- Uncomment for local dev -->
+  <!-- <link rel="stylesheet" type="text/css" href="https://stage.athletic.net/css/Bootstrap4-v-xc39MVoAsEn5zR9uFnqmM5I2Nf1UECyY21h3KE5ibQM1"> -->
+</div>
 
 <div class="row-block-forward">
-  <div class="coach-image-block" style="background-image: url(https://stage.athletic.net/app/features/images/steeplechase-1500x700.jpg); border-radius: 6px 6px 0 0; background-position: 100% 0%">
+  <div class="coach-image-block"
+    style="background-image: url(https://stage.athletic.net/app/features/images/steeplechase-1500x700.jpg); border-radius: 6px 6px 0 0; background-position: 100% 0%">
     <div class="title-block">
       <h1>Records, Rankings &amp; Training Tools</h1>
     </div>
   </div>
 </div>
 <div class="row-block-forward">
-  <div class="card center" style="margin: -150px 7px 0 7px;">
+  <div class="header-card center">
     <div class="header-red">
       Inspiring athletes to their best performances
     </div>
     <p>
-      The desire to make personal improvements is at the heart of competition. Athletes, parents and fans can create free accounts to utilize the extensive statistics base of Athletic.net to see where an athlete stands in comparison to their peers and their own past performances. Those who would like to contribute to the growth of Athletic.net and enhance their experience can also become monthly or yearly Athletic+ members.
+      The desire to make personal improvements is at the heart of competition. Athletes, parents and fans can create
+      free accounts to utilize the extensive statistics base of Athletic.net to see where an athlete stands in
+      comparison to their peers and their own past performances. Those who would like to contribute to the growth of
+      Athletic.net and enhance their experience can also become monthly or yearly Athletic+ members.
     </p>
   </div>
 </div>
@@ -26,37 +33,57 @@
   <div class="listL">
     <ul class="plan">
       <li class="plan-name">Free</li>
-      <li><a class="chevron-downl1" href="#rankings"><img class="noborder" style="height: 30px; margin-top: -9px; margin-right: 0.25rem" src="https://www.athletic.net/app/features/images/athlete/podium.svg" />Top Rankings</a>
+      <li><a class="chevron-downl1" href="#rankings"><img class="noborder"
+            style="height: 30px; margin-top: -9px; margin-right: 0.25rem"
+            src="https://www.athletic.net/app/features/images/athlete/podium.svg" />Top Rankings</a>
         <br />
         <span class="text-muted">Cross Country: Top 50</span>
         <br />
         <span class="text-muted">Track &amp; Field: Top 25</span>
       </li>
       <li><a class="chevron-downl1" href="#progress"><i class="far fa-chart-line mr05"></i>Track Progress</a></li>
-      <li><a class="chevron-downl1" href="#registration"><i class="far fa-check-square mr05"></i>Individual Registration</a></li>
-      <li><a class="chevron-downl1" href="#log"><img class="mr05 noborder" src="https://www.athletic.net/app/features/images/athlete/runner-red.svg" style="height: 20px;" />Training Log</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Compete</b> in Virtual Meets</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Share</b> Photos &amp; Videos</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Earn</b> Achievements &amp; Badges</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Follow</b> Teams &amp; Athletes</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/CrossCountry/Division/Rank.aspx?DivID=42876&D=5000">Hypothetical XC Meets</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/TrackAndField/Athlete.aspx?AID=1391187">Full Athlete Bios</a></li>
-      <li style="font-size: 20px;"><b>FREE</b></li>
+      <li><a class="chevron-downl1" href="#registration"><i class="far fa-check-square mr05"></i>Individual
+          Registration</a></li>
+      <li><a class="chevron-downl1" href="#log"><img class="mr05 noborder"
+            src="https://www.athletic.net/app/features/images/athlete/runner-red.svg" style="height: 20px;" />Training
+          Log</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Compete</b> in Virtual
+          Meets</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Share</b> Photos &amp;
+          Videos</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Earn</b> Achievements
+          &amp; Badges</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Follow</b> Teams &amp;
+          Athletes</a></li>
+      <li><a class="chevron-rightl1" target="_blank"
+          href="https://www.athletic.net/CrossCountry/Division/Rank.aspx?DivID=42876&D=5000">Hypothetical XC Meets</a>
+      </li>
+      <li><a class="chevron-rightl1" target="_blank"
+          href="https://www.athletic.net/TrackAndField/Athlete.aspx?AID=1391187">Full Athlete Bios</a></li>
+      <li style="font-size: 20px; padding: 25px;"><b>FREE</b></li>
     </ul>
   </div>
   <div class="listR">
     <ul class="plan">
-      <li class="plan-name" style="padding: 10.5px;"><img style="height: 33px;" src="https://s3.amazonaws.com/media.athletic.net/athletic-logos/AthleticPlus_Yellow.svg" /></li>
-      <li><img class="noborder" style="height: 30px; margin-top: -9px; margin-right: 0.25rem" src="https://www.athletic.net/app/features/images/athlete/podium.svg" /><a class="chevron-downl1" href="#rankings"><b>Unlimited</b> Rankings</a></li>
+      <li class="plan-name" style="padding: 10.5px;"><img style="height: 33px;"
+          src="https://s3.amazonaws.com/media.athletic.net/athletic-logos/AthleticPlus_Yellow.svg" /></li>
+      <li><img class="noborder" style="height: 30px; margin-top: -9px; margin-right: 0.25rem"
+          src="https://www.athletic.net/app/features/images/athlete/podium.svg" /><a class="chevron-downl1"
+          href="#rankings"><b>Unlimited</b> Rankings</a></li>
       <li><b>Ad-Free</b> Viewing Experience</li>
       <li>Exclusive Athletic+ Contests, Deals, &amp; Perks</li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://athletic.tv">Full <b>AthleticTV</b> Membership</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://plus.runnerspace.com">Free Month of <b>RunnerSpace +PLUS</b> Trial</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://coacheschoice.com">30% Off All <b>Coaches Choice</b> Books &amp; DVDs</a></li>
-      <li>Coupon for $5 off your team or individual registration fee for any Athletic.net event that uses our registration credit card processing</li>
+      <li><a class="chevron-rightl1" target="_blank" href="https://athletic.tv">Full <b>AthleticTV</b> Membership</a>
+      </li>
+      <li><a class="chevron-rightl1" target="_blank" href="https://plus.runnerspace.com">Free Month of <b>RunnerSpace
+            +PLUS</b> Trial</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="https://coacheschoice.com">30% Off All <b>Coaches Choice</b>
+          Books &amp; DVDs</a></li>
+      <li>Coupon for $5 off your team or individual registration fee for any Athletic.net event that uses our
+        registration credit card processing</li>
       <li><i>Plus, receive a free gift if you subscribe to a whole year.</i><i class="fas fa-gift ml1"></i></li>
       <li style="font-size: 20px;"><b>$9.99</b>/Month or <b>$59.99</b>/Year</li>
-      <li><a href="https://www.athletic.net/Partner/SiteSupporter/Upgrade.aspx" class="button" style="color: #fff; background-color: #3f6b9d; border-color: #31537a;">Upgrade</a></li>
+      <li style="padding: 25px;"><a href="https://www.athletic.net/Partner/SiteSupporter/Upgrade.aspx" class="button"
+          style="color: #fff; background-color: #3f6b9d; border-color: #31537a;">Upgrade</a></li>
     </ul>
   </div>
 </div>
@@ -69,7 +96,13 @@
       Athlete Standings on Local, Regional, State or National Platform
     </div>
     <p>
-      Ever wanted to know the best times for a specific event and region? Division? League? Now you can! Sort and filter results by level, location, league, event, season, grade, timing method, and more. Free users can view the top 50 rankings for Cross Country and the top 25 rankings for Track & Field. <b>Athletic+ members have access to unlimited rankings.</b> Shown here are the rankings for the <a href="https://www.athletic.net/TrackAndField/Division/Event.aspx?DivID=95145&Event=41" target="_blank">New York High School Men's 55 Meter Dash</a> for the 2018 Indoor Season. All 4,363 of them (as of 1/20/2018). <i>Did we mention you can highlight all entries from a specific team, grade, or meet?</i>
+      Ever wanted to know the best times for a specific event and region? Division? League? Now you can! Sort and filter
+      results by level, location, league, event, season, grade, timing method, and more. Free users can view the top 50
+      rankings for Cross Country and the top 25 rankings for Track & Field. <b>Athletic+ members have access to
+        unlimited rankings.</b> Shown here are the rankings for the <a
+        href="https://www.athletic.net/TrackAndField/Division/Event.aspx?DivID=95145&Event=41" target="_blank">New York
+        High School Men's 55 Meter Dash</a> for the 2018 Indoor Season. All 4,363 of them (as of 1/20/2018). <i>Did we
+        mention you can highlight all entries from a specific team, grade, or meet?</i>
     </p>
     <a class="button chevron-rightl05 green" href="https://www.athletic.net/tfx" target="_blank">
       View Unlimited Rankings
@@ -82,7 +115,8 @@
 <hr />
 <div class="row-block-forward" id="progress">
   <div class="img-element-30">
-    <img src="https://www.athletic.net/app/features/images/athlete/200Meters-new.jpg" class="noborder" style="width:400px;" />
+    <img src="https://www.athletic.net/app/features/images/athlete/200Meters-new.jpg" class="noborder"
+      style="width:400px;" />
   </div>
   <div class="text-element-right-70">
     <div class="header-blue">
@@ -92,7 +126,11 @@
       Athlete Profiles and results for each season
     </div>
     <p>
-      Curious what someone's best 200M time was last season? Go to their athlete bio and look at their records for each event sorted by season. Scroll down to see every single recorded result for their entire running career. Every Season Record and Personal Record is marked so you can quickly see their improvement. <i>You can find an athlete's profile page by clicking his name in any results or rankings page or by using the search tool at the top of every page.</i>
+      Curious what someone's best 200M time was last season? Go to their athlete bio and look at their records for each
+      event sorted by season. Scroll down to see every single recorded result for their entire running career. Every
+      Season Record and Personal Record is marked so you can quickly see their improvement. <i>You can find an athlete's
+        profile page by clicking his name in any results or rankings page or by using the search tool at the top of
+        every page.</i>
     </p>
   </div>
 </div>
@@ -106,7 +144,8 @@
       Enter events that offer open registration
     </div>
     <p>
-      Our easy-to-search events list allows you to register unattached in any Track or Cross Country meet offering that option.
+      Our easy-to-search events list allows you to register unattached in any Track or Cross Country meet offering that
+      option.
     </p>
     <a class="button chevron-rightl05 red" target="_blank" href="https://www.athletic.net/events/">
       Find an Event
@@ -121,10 +160,11 @@
   </div>
 </div>
 <div class="row-block-forward" id="log">
-  <div class="header-image-block" style="background-image: url(https://stage.athletic.net/app/features/images/trainingLog/runner-sunset-1500x641.jpg);">
+  <div class="header-image-block"
+    style="background-image: url(https://stage.athletic.net/app/features/images/trainingLog/runner-sunset-1500x641.jpg);">
     <div class="title-block">
       <h1>Training Logs</h1>
-    <span class="small">Keep in stride with your goals</span>
+      <span class="small">Keep in stride with your goals</span>
     </div>
   </div>
 </div>
@@ -144,7 +184,9 @@
       Focus your training
     </div>
     <p>
-      Keep track of weekly mileage to set and meet important training goals. Every athlete's training log also connects workout and race data automatically, populating an athlete's training log with all their meet results. Now you can see how those long weekend runs and mid-week speed workouts correspond to the quality of racing!
+      Keep track of weekly mileage to set and meet important training goals. Every athlete's training log also connects
+      workout and race data automatically, populating an athlete's training log with all their meet results. Now you can
+      see how those long weekend runs and mid-week speed workouts correspond to the quality of racing!
     </p>
   </div>
 </div>
@@ -158,7 +200,9 @@
       Follow along with your entire team
     </div>
     <p>
-      Coaches can assign workouts to athletes, for which they can fill in the details as they complete the workout. This is a great way to keep the entire team up to date on everyone's training progress! Talk to your coach about this feature if he's not yet using it to assign your workouts.
+      Coaches can assign workouts to athletes, for which they can fill in the details as they complete the workout. This
+      is a great way to keep the entire team up to date on everyone's training progress! Talk to your coach about this
+      feature if he's not yet using it to assign your workouts.
     </p>
   </div>
   <div class="img-element-30">
@@ -172,7 +216,8 @@
 <hr />
 <div class="row-block-forward">
   <div class="img-element-30">
-    <img src="https://s3.amazonaws.com/media.athletic.net/emails/training-log/tl-progress-1000x400.jpg" class="img-shadow-border" />
+    <img src="https://s3.amazonaws.com/media.athletic.net/emails/training-log/tl-progress-1000x400.jpg"
+      class="img-shadow-border" />
   </div>
   <div class="text-element-right-70">
     <div class="header-red">
@@ -182,7 +227,8 @@
       Gain key insights into workout habits
     </div>
     <p>
-      Daily, weekly and monthly mileage charts help keep an eye on progress, better enabling the planning of future workouts and quality goal setting. Knowledge is power, as they say.
+      Daily, weekly and monthly mileage charts help keep an eye on progress, better enabling the planning of future
+      workouts and quality goal setting. Knowledge is power, as they say.
     </p>
     <a class="button chevron-rightr05 red" target="_blank" href="https://www.athletic.net/log/">
       Go to my Training Log
