--- a/html/entryfeemanagement.html
+++ b/html/entryfeemanagement.html
@@ -1,10 +1,12 @@
-<!--
-  Page URL: https://support.athletic.net/article/478qha3s2h-entry-fee-management
-  -->
-
-<head>
-  <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
-</head>
+<div class="hd--html">
+  <!--
+      Page URL: https://support.athletic.net/article/478qha3s2h-entry-fee-management
+    -->
+    <link rel="stylesheet" type="text/css"
+      href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+    <!-- Uncomment for local dev -->
+    <!-- <link rel="stylesheet" type="text/css" href="https://stage.athletic.net/css/Bootstrap4-v-xc39MVoAsEn5zR9uFnqmM5I2Nf1UECyY21h3KE5ibQM1"> -->
+  </div>
 
 <div class="row-block-forward">
   <div class="coach-image-block" style="background-image: url(https://files.helpdocs.io/m4shxzbg12/articles/oyazy7kwuw/1595006100104/waterfall.png); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
@@ -14,7 +16,7 @@
   </div>
 </div>
 <div class="row-block-forward">
-  <div class="card center" style="margin: -150px 7px 0 7px;">
+  <div class="header-card center">
     <div class="header-red">
       Easily Collect and Track Payments
     </div>
