--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -1,10 +1,12 @@
-<!--
-  Page URL: https://support.athletic.net/article/mt4uclcokb-meet-day-tools
--->
-
-<head>
-  <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
-</head>
+<div class="hd--html">
+  <!--
+    Page URL: https://support.athletic.net/article/mt4uclcokb-meet-day-tools
+  -->
+  <link rel="stylesheet" type="text/css"
+    href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+  <!-- Uncomment for local dev -->
+  <!-- <link rel="stylesheet" type="text/css" href="https://stage.athletic.net/css/Bootstrap4-v-xc39MVoAsEn5zR9uFnqmM5I2Nf1UECyY21h3KE5ibQM1"> -->
+</div>
 
 <div class="row-block-reverse">
   <div class="coach-image-block" style="background-image: url(https://lh3.googleusercontent.com/Hvyiy7mhkbLWUwBljzl9XmQG__9q-HQjZFFjpDp2sv3crEBFwnMxk-UWSrgPr44hlSYlb_Zui-CAF5N_V_BPvCA=w1500); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
@@ -16,7 +18,7 @@
   </div>
 </div>
 <div class="row-block-forward">
-  <div class="card center" style="margin: -150px 7px 0 7px;">
+  <div class="header-card center">
     <div class="header-red">
       Seed, Print Heat Sheets, and Enter and Publish Results
     </div>
