--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 <body>
 	GitHub Pages hosted site to serve as a CSS CDN for support.athletic.net. See the repo Readme for instructions.
+
+	<div><a href="/html/athletesparentsfansfeatures.html">Athletes, Parents, Fans</a></div>
+	<div><a href="/html/coachfeatures.html">Coaches </a></div>
+	<div><a href="/html/entryfeemanagement.html">Entry Fee management </a></div>
+	<div><a href="/html/eventdirectorfeatures.html">Event Director </a></div>
+	<div><a href="/html/getapp.html">Get App </a></div>
+	<div><a href="/html/meetdaytools.html">Meet Day Tools </a></div>
+	<div><a href="/html/start-training-log.html">Start Training Log </a></div>
 </body>
 
 </html>
