--- a/html/getapp.html
+++ b/html/getapp.html
@@ -1,31 +1,46 @@
-<!--
-Page URL: https://support.athletic.net/article/urusen2q0f-athletic-app
-I'm not happy with the header on this one. Would love to have a nice photo like we do as the header on some of the other pages and overlay the text. This screengrab that I used doesn't make me happy.
--->
+<div class="hd--html">
+  <!--
+  Page URL: https://support.athletic.net/article/urusen2q0f-athletic-app
+  I'm not happy with the header on this one. Would love to have a nice photo like we do as the header on some of the other pages and overlay the text. This screengrab that I used doesn't make me happy.
+  -->
+  <link rel="stylesheet" type="text/css"
+    href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+  <!-- Uncomment for local dev -->
+  <!-- <link rel="stylesheet" type="text/css" href="https://stage.athletic.net/css/Bootstrap4-v-xc39MVoAsEn5zR9uFnqmM5I2Nf1UECyY21h3KE5ibQM1"> -->
+</div>
 
-<head>
-  <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
-</head>
-
-<div class="center">
-    <img class="noborder" src="https://files.helpdocs.io/m4shxzbg12/articles/9q8hhdkmw4/1588189016233/2020-04-29-1229.png" />
+<!-- <div class="center">
+  <img class="noborder"
+    src="https://files.helpdocs.io/m4shxzbg12/articles/9q8hhdkmw4/1588189016233/2020-04-29-1229.png" />
   <a href="https://apps.apple.com/us/app/athletic-app/id1482431809">
-    <img style="height: 66px; width: 200px;" class="noborder" src="https://www.athletic.net/images/Partners/appStore.svg">
+    <img style="height: 66px; width: 200px;" class="noborder"
+      src="https://www.athletic.net/images/Partners/appStore.svg">
   </a>
   <br class="rwd-break">
   <a href="https://play.google.com/store/apps/details?id=net.athletic.app">
-    <img style="height: 66px; width: 220px;" class="noborder" src="https://files.helpdocs.io/m4shxzbg12/articles/9q8hhdkmw4/1588189437790/2020-04-29-1243.png">
+    <img style="height: 66px; width: 220px;" class="noborder"
+      src="https://files.helpdocs.io/m4shxzbg12/articles/9q8hhdkmw4/1588189437790/2020-04-29-1243.png">
   </a>
-</div>
-<hr />
+</div> -->
 <div class="row-block-reverse">
   <div class="text-element-left-70 m-auto">
     <div class="header-green">
       Download AthleticAPP
     </div>
     <div class="subheader">
-      We're proud to introduce the new AthleticAPP, which is a communications platform and engagement network for Track & Field and Cross Country teams, athletes, parents, and fans. AthleticAPP also provides the platform for competition in
+      AthleticAPP is a communications platform and engagement network for Track
+      & Field and Cross Country teams, athletes, parents, and fans. AthleticAPP also provides the platform for
+      competition in
       virtual meets.
+    </div>
+    <div>
+      <a href="https://apps.apple.com/us/app/athletic-app/id1482431809" class="ib">
+        <img src="https://www.athletic.net/images/Partners/appStore.svg" style="max-width: 155px;" class="noborder" />
+      </a>
+      <br class="rwd-break" />
+      <a href="https://play.google.com/store/apps/details?id=net.athletic.app" class="ib">
+        <img src="https://www.athletic.net/images/Partners/googlePlay.png" style="max-width: 155px;" class="noborder" />
+      </a>
     </div>
   </div>
   <div class="img-element-30">
@@ -35,14 +50,16 @@ I'm not happy with the header on this one. Would love to have a nice photo like 
 <hr />
 <div class="row-block-forward">
   <div class="img-element-30">
-    <img class="noborder" src="https://edge.athletic.net/emails/eblasts/newsletters/06.19.20/athletic-mile-run-500w.gif" />
+    <img class="noborder"
+      src="https://edge.athletic.net/emails/eblasts/newsletters/06.19.20/athletic-mile-run-500w.gif" />
   </div>
   <div class="text-element-right-70 m-auto">
     <div class="header-blue">
       Compete from Anywhere
     </div>
     <div class="subheader">
-      Find and enter virtual events from across the country, record your workouts, and compete with others across the country!
+      Find and enter virtual events from across the country, record your workouts, and compete with others across the
+      country!
     </div>
     <div class="listheader blue">
       With AthleticAPP, you can
@@ -56,10 +73,12 @@ I'm not happy with the header on this one. Would love to have a nice photo like 
   </div>
 </div>
 <div class="center">
-  <a class="button chevron-rightl1 blue ib" target="_blank" href="https://support.athletic.net/article/pandxzexi6-recording-a-run">
+  <a class="button chevron-rightl1 blue ib" target="_blank"
+    href="https://support.athletic.net/article/pandxzexi6-recording-a-run">
     Record a run with AthleticAPP
   </a>
-  <a class="button chevron-rightl1 bluefill ib" target="_blank" href="/article/tzprrpq4k8-how-to-register-for-and-compete-in-virtual-meets">
+  <a class="button chevron-rightl1 bluefill ib" target="_blank"
+    href="/article/tzprrpq4k8-how-to-register-for-and-compete-in-virtual-meets">
     Register for a virtual meet
   </a>
 </div>
@@ -73,11 +92,16 @@ I'm not happy with the header on this one. Would love to have a nice photo like 
       A single hub for announcements and conversations
     </div>
     <p>
-      Text chains and email threads can be almost too much to manage during the season. With AthleticAPP, we've created an all-in-one solution for you to connect with your athletes, coaches and parents. With the team announcements features, you can
-      make public or team-only posts to share updates or team business. With the conversations features, you can have one-on-one or group conversations with any team member or members. You can pre-define groups for quick access later.
+      Text chains and email threads can be almost too much to manage during the season. With AthleticAPP, we've created
+      an all-in-one solution for you to connect with your athletes, coaches and parents. With the team announcements
+      features, you can
+      make public or team-only posts to share updates or team business. With the conversations features, you can have
+      one-on-one or group conversations with any team member or members. You can pre-define groups for quick access
+      later.
     </p>
     <div class="center">
-      <iframe width="300" height="150" src="https://www.youtube.com/embed/wivBdLwp89c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
+      <iframe width="300" height="150" src="https://www.youtube.com/embed/wivBdLwp89c" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
       </iframe>
     </div>
   </div>
@@ -99,9 +123,12 @@ I'm not happy with the header on this one. Would love to have a nice photo like 
       Share Your Hard Work
     </div>
     <p>
-      We've made it easy with AthleticAPP to follow your athletes and teammates, your team, and even your rivals. Athletic.net has always offered a robust ecosystem to see what your team and competitors are achieving, but AthleticAPP takes those
-      abilities to another level. <a href="/article/8h387cc4dr-following-and-connecting-with-teams-and-athletes" class="chevron-rightl05 ml05" target="_blank">
-        Learn about following and connecting with teams and athletes
+      AthleticAPP offers both coaches and athletes a chance to share their hard work on team and individual feeds. Had
+      an amazing workout today? Create a post, attach a picture and share. Did one of your athletes earn a big PR? Post
+      to your team
+      page with a video and a celebratory message. <a href="/article/s5kszddik8-posting-to-your-profile"
+        class="chevron-rightl05 ml05" target="_blank">
+        Learn about posting to your profile
       </a>
     </p>
   </div>
@@ -113,16 +140,19 @@ I'm not happy with the header on this one. Would love to have a nice photo like 
       Connect with Teammates and Rivals
     </div>
     <p>
-      AthleticAPP offers both coaches and athletes a chance to share their hard work on team and individual feeds. Had an amazing workout today? Create a post, attach a picture and share. Did one of your athletes earn a big PR? Post to your team
-      page with a video and a celebratory message. <a href="/article/s5kszddik8-posting-to-your-profile" class="chevron-rightl05 ml05" target="_blank">
-        Learn about posting to your profile
+      We've made it easy with AthleticAPP to follow your athletes and teammates, your team, and even your rivals.
+      Athletic.net has always offered a robust ecosystem to see what your team and competitors are achieving, but
+      AthleticAPP takes those
+      abilities to another level. <a href="/article/8h387cc4dr-following-and-connecting-with-teams-and-athletes"
+        class="chevron-rightl05 ml05" target="_blank">
+        Learn about connecting with teams and athletes
       </a>
     </p>
   </div>
   <div class="img-element-30">
     <div class="iconwrapper1">
       <div class="iconwrapper2 blue">
-        <i class="fal fa-share-alt m-auto"></i>
+        <i class="fal fa-hands-helping m-auto"></i>
       </div>
     </div>
   </div>
