--- a/html/start-training-log.html
+++ b/html/start-training-log.html
@@ -1,10 +1,12 @@
-<!--
-  Page URL: https://support.athletic.net/article/nyb2x67mbr-start-your-training-log
-  -->
-
-<head>
-  <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
-</head>
+<div class="hd--html">
+  <!--
+      Page URL: https://support.athletic.net/article/nyb2x67mbr-start-your-training-log
+    -->
+    <link rel="stylesheet" type="text/css"
+      href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+    <!-- Uncomment for local dev -->
+    <!-- <link rel="stylesheet" type="text/css" href="https://stage.athletic.net/css/Bootstrap4-v-xc39MVoAsEn5zR9uFnqmM5I2Nf1UECyY21h3KE5ibQM1"> -->
+  </div>
 
 <div class="row-block-reverse">
   <div class="coach-image-block" style="background-image: url(https://stage.athletic.net/app/features/images/trainingLog/coast-overlook-1155x770.jpg); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
@@ -15,7 +17,7 @@
   </div>
 </div>
 <div class="row-block-reverse">
-  <div class="card center" style="margin: -150px 7px 0  7px">
+  <div class="header-card center">
     <div class="header-red">
       Use AthleticAPP to track your workouts!
     </div>
