Fix incorrect Athletic+ upgrade button

--- a/html/athletesparentsfansfeatures.html
+++ b/html/athletesparentsfansfeatures.html
@@ -82,7 +82,7 @@
         registration credit card processing</li>
       <li><i>Plus, receive a free gift if you subscribe to a whole year.</i><i class="fas fa-gift ml1"></i></li>
       <li style="font-size: 20px;"><b>$9.99</b>/Month or <b>$59.99</b>/Year</li>
-      <li style="padding: 25px;"><a href="https://www.athletic.net/Partner/SiteSupporter/Upgrade.aspx" class="button"
+      <li style="padding: 25px;"><a href="https://www.athletic.net/userhome/userid/subscriptions/athleticplus" class="button"
           style="color: #fff; background-color: #3f6b9d; border-color: #31537a;">Upgrade</a></li>
     </ul>
   </div>
