remove unneeded target="_blank"

--- a/html/athletesparentsfansfeatures.html
+++ b/html/athletesparentsfansfeatures.html
@@ -230,7 +230,7 @@
       Daily, weekly and monthly mileage charts help keep an eye on progress, better enabling the planning of future
       workouts and quality goal setting. Knowledge is power, as they say.
     </p>
-    <p><a class="button chevron-rightr05 red" target="_blank" href="https://support.athletic.net/article/nyb2x67mbr-start-your-training-log">Start tracking workouts using AthleticAPP </a></p>
+    <p><a class="button chevron-rightr05 red" href="https://support.athletic.net/article/nyb2x67mbr-start-your-training-log">Start tracking workouts using AthleticAPP </a></p>
     <p><a class="button chevron-rightr05 red" target="_blank" href="https://www.athletic.net/log/">View Training Log on web </a></p>
   </div>
 </div>
