added comments about editing directly in HelpDocs

--- a/html/entryfeemanagement.html
+++ b/html/entryfeemanagement.html
@@ -1,4 +1,5 @@
 <div class="hd--html">
+  <!--Do not edit this document directly in HelpDocs! Please make commits to https://github.com/AthleticNet/athletic-support-styles instead and then copy the code here-->
   <!--
       Page URL: https://support.athletic.net/article/478qha3s2h-entry-fee-management
     -->
