--- a/html/getapp.html
+++ b/html/getapp.html
@@ -1,4 +1,5 @@
 <div class="hd--html">
+  <!--Do not edit this document directly in HelpDocs! Please make commits to https://github.com/AthleticNet/athletic-support-styles instead and then copy the code here-->
   <!--
   Page URL: https://support.athletic.net/article/urusen2q0f-athletic-app
   I'm not happy with the header on this one. Would love to have a nice photo like we do as the header on some of the other pages and overlay the text. This screengrab that I used doesn't make me happy.
