--- a/html/athletesparentsfansfeatures.html
+++ b/html/athletesparentsfansfeatures.html
@@ -1,4 +1,5 @@
 <div class="hd--html">
+  <!--Do not edit this document directly in HelpDocs! Please make commits to https://github.com/AthleticNet/athletic-support-styles instead and then copy the code here-->
   <!--
     Page URL: https://support.athletic.net/article/i6hyoj1if1-features-for-athletes-parents-fans
   -->
