--- a/html/eventdirectorfeatures.html
+++ b/html/eventdirectorfeatures.html
@@ -1,4 +1,5 @@
 <div class="hd--html">
+  <!--Do not edit this document directly in HelpDocs! Please make commits to https://github.com/AthleticNet/athletic-support-styles instead and then copy the code here-->
   <!--
       Page URL: https://support.athletic.net/article/vqu1tq1k4q-features-for-event-directors-and-timers
     -->
