--- a/html/eventdirectorfeatures.html
+++ b/html/eventdirectorfeatures.html
@@ -36,8 +36,10 @@
   <div class="listR">
     <ul class="plan">
       <li class="plan-name"><i class="fas fa-star yellowS mr05"></i>Supporter</li>
+      
+      <li><a href="/article/3afoecmp7g-run-the-meet-overview" class="chevron-rightl1" target="_blank"><b>Seed</b>, <b>Enter Results</b>, and <b>Score</b> your meet right from a browser</a></li>
       <li><a href="/article/mt4uclcokb-meet-day-tools" class="chevron-rightl1" target="_blank"><b>Advanced</b> Meet
-          Management</a></li>
+        Management</a></li>
       <li><a href="/article/urusen2q0f-athletic-app" class="chevron-rightl1" target="_blank">Custom <b>AthleticAPP</b>
           Event Pages</a></li>
       <li><a href="/article/478qha3s2h-entry-fee-management" class="chevron-rightl1" target="_blank"><b>Online</b> Entry
@@ -167,10 +169,10 @@
 <div class="row-block-reverse" id="downloadentries">
   <div class="text-element-left-70">
     <div class="header-red">
-      Downloadable Entries
+      Run Your Meet
     </div>
     <div class="subheader">
-      Compatible with all popular meet managers
+      Compatible with all popular meet managers—<a href="/article/3afoecmp7g-run-the-meet-overview">Or score your meet right from AthleticNET!</a>
     </div>
     <p>
       Download submitted entries in formats designed specifically for <b>Hy-Tek's Meet Manager</b>, <b>MeetPro</b>,
@@ -183,7 +185,7 @@
   <div class="img-element-30">
     <div class="iconwrapper1">
       <div class="iconwrapper2 red">
-        <i class="far fa-download m-auto"></i>
+        <i class="fas fa-running m-auto"></i>
       </div>
     </div>
   </div>
