--- a/html/coachfeatures.html
+++ b/html/coachfeatures.html
@@ -43,6 +43,7 @@
     <ul class="plan">
       <li class="plan-name"><i class="fas fa-star yellowS mr05"></i>Team Supporter</li>
       <li><b>Everything</b> from <b>FREE</b> Forever, plus:</li>
+      <li><a href="/article/3afoecmp7g-run-the-meet-overview" class="chevron-rightl1" target="_blank"><b>Seed</b>, <b>Enter Results</b>, and <b>Score</b> your meet right from a browser</a></li>
       <li><a href="/article/vqu1tq1k4q-features-for-event-directors-and-timers" class="chevron-rightl1"
           target="_blank"><b>Advanced</b> Event Hosting Features</a>
         <br />
